--- a/example_2/index.html
+++ b/example_2/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Example 2</title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body class="body">
-  <header class="header">
-    <a class="back-button" href="/index.html">⬅</a>
-    <h1>План урока: Github, Условные и логические операторы и циклы</h1>
-  </header>
-  <section class="conditional">
-    <h2>Условные операторы</h2>
-    <div class="conditional__result"></div>
-    <!-- ---- -->
-  </section>
-  <section class="loop">
-    <div class="loop__result"></div>
-    <!-- ---- -->
-  </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Example 2</title>
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="body">
+    <header class="header">
+      <a class="back-button" href="/index.html">⬅</a>
+      <h1>План урока: Github, Условные и логические операторы и циклы</h1>
+    </header>
+    <section class="conditional">
+      <h2>Условные операторы</h2>
+      <div class="conditional__result"></div>
+      <strong class="title">if / else / else if / ?</strong>
+      <!-- ---- -->
+    </section>
+    <section class="conditional">
+      <h2>Логические операторы</h2>
+      <div class="conditional__result"></div>
+      <strong class="title">|| / && / ! </strong>
+      <!-- ---- -->
+    </section>
+    <section class="loop">
+      <h2>ЦИКЛЫ</h2>
+      <strong class="title">while / do..while / for </strong>
+      <div class="loop__result"></div>
+      <!-- ---- -->
+    </section>
 
-  <script src="./common.js"></script>
-</body>
+    <script src="./common.js"></script>
+  </body>
 </html>
