--- a/example_2/index.html
+++ b/example_2/index.html
@@ -12,6 +12,7 @@
     <header class="header">
       <a class="back-button" href="/index.html">⬅</a>
       <h1>План урока: Github, Условные и логические операторы и циклы</h1>
+      <button>BUTTON</button>
     </header>
     <section class="conditional">
       <h2>Условные операторы</h2>
